[project]
name = "ddpm"
version = "0.1.0"
description = "Denoising Diffusion Probabilistic Models from scratch in PyTorch."
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [{ name = "Nassim", email = "nassimlattab@gmail.com" }]
keywords = ["deep-learning", "diffusion-models", "ddpm", "ddim", "generative-models", "pytorch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.11",
    "torchvision>=0.26",
    "numpy>=2.0",
    "omegaconf>=2.3",
    "tensorboard>=2.18",
    "tqdm>=4.66",
    "pillow>=11.0",
    "clean-fid>=0.1.35",
    "scipy>=1.14",
    "matplotlib>=3.9",
    "torchmetrics>=1.9.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ipykernel>=6.29",
    "jupyter>=1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ddpm"]

# -----------------------------------------------------------------------------
# uv configuration: PyTorch CUDA 13.0 wheels
# -----------------------------------------------------------------------------
# PyTorch publishes CUDA-enabled wheels on a dedicated index (not PyPI) for
# Windows and Linux. We point uv to this index for torch and torchvision only,
# leaving all other packages on PyPI. macOS falls back to PyPI (no CUDA build
# is provided for macOS).
[tool.uv.sources]
torch = [
    { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

# -----------------------------------------------------------------------------
# Ruff configuration: lint + format
# -----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py314"
extend-exclude = ["notebooks", "assets", "data"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "N",      # pep8-naming
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "N812",   # lowercase imported as non-lowercase
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
"scripts/*" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# -----------------------------------------------------------------------------
# Pytest configuration
# -----------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
